--- a/package.json
+++ b/package.json
@@ -16,12 +16,18 @@
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.5",
     "gray-matter": "^4.0.3",
+    "markdown-it": "^13.0.1",
+    "marked": "^4.2.12",
     "next": "13.1.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-mark": "^0.0.4",
     "typescript": "4.9.4"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.9",
+    "@types/markdown-it": "^12.2.3",
+    "@types/marked": "^4.0.8",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.4"
